--- a/onePxBorder.html
+++ b/onePxBorder.html
@@ -33,6 +33,7 @@
             height: 200%;
             transform-origin: left top;
             transform: scale(0.5);
+            pointer-events: none;
         }
     </style>
 </head>
